# mfd-osd-control

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: manual_release.yml  pull_requests.yml
examples/: simple_example.py
mfd_osd_control/: mfd_osd_control.py
sphinx-doc/: Makefile  README.md  conf.py  generate_docs.py  index.rst  py-modindex.rst
tests/unit/test_mfd_osd_control/: test_mfd_osd_control.py
